[gd_scene load_steps=17 format=3 uid="uid://7ogrpfxvp8by"]

[ext_resource type="Texture2D" uid="uid://ca16fhxs0crxl" path="res://assets/warped city files/SPRITES/misc/turret/turret-1.png" id="1_61bo6"]
[ext_resource type="Script" path="res://scripts/turrent_enemy.gd" id="1_hmq48"]
[ext_resource type="Texture2D" uid="uid://ct4p4pq28ru1i" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-1.png" id="2_ex6xp"]
[ext_resource type="Texture2D" uid="uid://dxxgo4rlohfi3" path="res://assets/warped city files/SPRITES/misc/turret/turret-2.png" id="2_h8yio"]
[ext_resource type="Texture2D" uid="uid://dubws005dcekv" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-2.png" id="3_iipb1"]
[ext_resource type="Texture2D" uid="uid://cb2hmf3ow0bc7" path="res://assets/warped city files/SPRITES/misc/turret/turret-3.png" id="3_j03b4"]
[ext_resource type="Texture2D" uid="uid://c32ntyqmdmb4x" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-3.png" id="4_gprki"]
[ext_resource type="Texture2D" uid="uid://dg06j17dxqk70" path="res://assets/warped city files/SPRITES/misc/turret/turret-4.png" id="4_kj0mi"]
[ext_resource type="Texture2D" uid="uid://j7uw2deqi81v" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-4.png" id="5_gbtoj"]
[ext_resource type="Texture2D" uid="uid://nj7hey1jmf6a" path="res://assets/warped city files/SPRITES/misc/turret/turret-5.png" id="5_ou7ke"]
[ext_resource type="Texture2D" uid="uid://cqqfjji7qux1x" path="res://assets/warped city files/SPRITES/misc/turret/turret-6.png" id="6_dbvys"]
[ext_resource type="Texture2D" uid="uid://cumkex1rdpaq7" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-5.png" id="6_rlkb6"]
[ext_resource type="Texture2D" uid="uid://4bor3gol3skj" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-6.png" id="7_wey85"]
[ext_resource type="PackedScene" uid="uid://djfcb0gpaeask" path="res://scenes/EnemeyHB.tscn" id="8_gv463"]
[ext_resource type="Texture2D" uid="uid://cxdf03k1rww8w" path="res://assets/sprites/13.png" id="15_s6ef6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p7tnk"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("2_ex6xp")
}, {
"duration": 0.5,
"texture": ExtResource("3_iipb1")
}, {
"duration": 0.5,
"texture": ExtResource("4_gprki")
}, {
"duration": 0.5,
"texture": ExtResource("5_gbtoj")
}, {
"duration": 0.5,
"texture": ExtResource("6_rlkb6")
}, {
"duration": 0.5,
"texture": ExtResource("7_wey85")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_61bo6")
}, {
"duration": 1.0,
"texture": ExtResource("2_h8yio")
}, {
"duration": 1.0,
"texture": ExtResource("3_j03b4")
}, {
"duration": 1.0,
"texture": ExtResource("4_kj0mi")
}, {
"duration": 1.0,
"texture": ExtResource("5_ou7ke")
}, {
"duration": 1.0,
"texture": ExtResource("6_dbvys")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h8yio")
}],
"loop": true,
"name": &"shooting",
"speed": 5.0
}]

[node name="turrentEnemy" type="CharacterBody2D"]
script = ExtResource("1_hmq48")

[node name="turrentCollision" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 1.19209e-07)
scale = Vector2(1.81667, 1.8403)
polygon = PackedVector2Array(-5.17241, -10.3448, -5.17241, 4.31035, -10.3448, 4.31035, -10.3448, 9.48276, -5.17241, 9.48276, 10.3448, 9.48276, 10.3448, 4.31035, 5.17241, 4.31035, 5.17241, -10.3448)

[node name="turrentSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_p7tnk")
animation = &"idle"
frame_progress = 0.640335

[node name="turrentRayFront" type="RayCast2D" parent="."]
scale = Vector2(0.989899, 1)
target_position = Vector2(-153.551, 0)
hit_from_inside = true
collide_with_areas = true

[node name="turrentRayBack" type="RayCast2D" parent="."]
scale = Vector2(-0.99, -1)
target_position = Vector2(-153.551, 0)
hit_from_inside = true
collide_with_areas = true

[node name="EnemyHealthBar" parent="." instance=ExtResource("8_gv463")]
scale = Vector2(0.582517, 0.515456)
metadata/_edit_use_anchors_ = true

[node name="bulletStart" type="Marker2D" parent="."]
position = Vector2(20, -14)

[node name="testSprite" type="Sprite2D" parent="bulletStart"]
visible = false
position = Vector2(21, 0)
scale = Vector2(0.249004, 0.1875)
texture = ExtResource("15_s6ef6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
